<resources>
    <string name="app_name">Fast Fix</string>
    <string name="app_name_intro">الإصلاح السريع </string>
    <string name="menu_home">الرئيسيه</string>
    <string name="about_us">من نحن</string>
    <string name="contact_us">إتصل بنا</string>

    <string name="services">خدماتنا</string>
    <string name="tel"><u>الجوال:</u></string>
    <string name="address"><u>الاسم:</u></string>
    <string name="google_api">AIzaSyD9cXmVfYx8H9ulMictnIDJfR1L9SMdhvA</string>
    <string name="enter_your_name_here">أدخل اسمك هنا</string>
    <string name="enter_phone_number"> 054444444 أدخل رقم الجوال هنا</string>
    <string name="enter_your_description">ماهو وصف مشكلتك</string>
    <string name="next">التالي</string>
    <string name="create_request">إنشاء الطلب</string>
    <string name="close_search">اغلاق البحث</string>
    <string name="search_by_telephone_request_number">بحث برقم الجوال او رقم الطلب</string>
    <string name="order_confirm_head">شكرا لك. سيتم الإتصال بك خلال 5 دقائق الرجاء الإحتفاظ برقم الطلب وتصوير الشاشة من خلال الضغط على (تصويرالشاشة) . </string>
    <string name="capture_screen">تصوير الشاشة</string>
    <string name="invoices">الفاتورة</string>
    <string name="category">نوع المشكلة</string>
    <string name="cancel">إلغاء الطلب</string>
    <string name="reminder">تذكير</string>
    <string name="description">وصف المشكلة</string>
    <string name="attachment">المرفقات</string>
    <string name="free_toll">Free\nToll</string>
    <string name="_92000000000">92000000000</string>
    <string name="company_name_nlicence_no_12312312_nwww_xxxx_com">Company Name\nLicence No:12312312 \nwww.xxxx.com</string>
    <string name="date_placeholder">May 24, 2015</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="_24_7_support">24/7 Support</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="_9665443322112">9665443322112</string>
    <string name="enter_your_message_here">الرجاء ادخال الاستفسار هنا </string>
    <string name="subject">الموضوع</string>
    <string name="name">االاسم</string>
    <string name="send">ارسال</string>
    <string name="create_new_request">إنشاء الطلب</string>
    <string name="fast_fix_application">Fast Fix Application</string>
    <string name="the_speed_fixing">The Speed Fixing</string>
    <string name="sos">إتصال سريع</string>
    <string name="our_services">خدماتنا</string>
    <string name="enter_name">أدخل اسمك هنا</string>
    <string name="enter_mobile">أدخل رقم الجوال هنا</string>
    <string name="enter_desc">ادخل وصف مشكلتك</string>
    <string name="select_category">اختار نوع المشكلة</string>
    <string name="max_3mb">مسموح كأقصى 3 م.ب</string>
    <string name="storage_permision">السماح بالوصول الى مركز الصور</string>
    <string name="permission_denied">عدم السماح بالوصول</string>
    <string name="unable_to_get_address">لم يتم الوصول الى العنوان</string>
    <string name="request_placed">تم ارسال الطلب بنجاح!</string>
    <string name="slected_location">الموقع الذي تم اختيارة</string>
    <string name="waiting_for_location">تحديد الموقع!</string>
    <string name="searching">يتم البحث.....!</string>
    <string name="nothing_found">لم يتم العثور!</string>
    <string name="saved_to_your_gallery">تم حفظ الطلب في معرض الصور</string>
    <string name="request_closed">تم إغلاق الطلب بنجاح</string>
    <string name="no_invoice">لايوجد فاتورة مرفقة!</string>
    <string name="no_attachment">لايوجد مرفقات!</string>
    <string name="cancel_request">جاري الإلغاء...!</string>
    <string name="view">عرض</string>
    <string name="terms">\nالشروط ولأحكام :
\n•	لكشف ٦٠ ريال وفي حال تم الإصلاح يتم خصم قيمة الكشف من أجور الإصلاح .
\n•	تقديمك للطلب هو بمثابة موافقه منك على تنفيذ الطلب ومسؤول عن البيانات التي يتم ادخالها.
\n•	يتم توفير ضمان للخدمات المقدمة بناءا على ما يتم الإتفاق به مع مزود الخدمة اقلها شهر من تاريخ تنفيذ الخدمة.
\n•	الأسعار يتم تقييمها من قبل مزود الخدمة وهي غير ثابتة وتشمل القيمة المضافة.
\n•	التطبيق غير مسؤول عن قطع الغيار التي يحتاجها العميل وهي على نفقته الخاصة بالكامل.
\n•	يتم دفع المبلغ المتفق عليه كاش قبل إتمام الخدمة ان تم طلب ذلك من مقدم الخدمة.
\n•	اي مواد يتم شراءها سيتم دفعها من قبل العميل مباشرة قبل البدء بالعمل لمقدم الخدمة.
\n•	إذا كان وصف المشكلة غير مطايق للبيانات المدخلة في الطلب يتم الإتفاق على سعر جديد وخدمة جديدة.
\n•	في حال عدم ارتداء الفني للكمامات و القفازات الخدمة تقدم مجانا.
\n•	الضمان ٣٠ يوم من تاريخ أصدار الفاتوره.
    </string>
    <string name="email_about"><u>Info@fastfixapp.com</u> الايميل:</string>
    <string name="accept_terms">موافق على الشروط و الأحكام</string>
</resources>