<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/about_us"
        android:enabled="true"
        android:icon="@drawable/ic_people_white_24dp"
        android:title="@string/about_us" />
    <item
        android:id="@+id/contact_us"
        android:enabled="true"
        android:icon="@drawable/ic_email_white_24dp"
        android:title="@string/contact_us" />


    <item
        android:id="@+id/services"
        android:enabled="true"
        android:icon="@drawable/ic_rock_and_rollo"
        android:title="@string/services" />
</menu>